--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.lapism:searchview:3.0.2'
 }
